[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/dialogic/Example Assets/backgrounds/background-1.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://paulo.gd" type="Script" id=3]
[ext_resource path="res://Imagens/f3a222a4e1676e5.png" type="Texture" id=4]
[ext_resource path="res://desafio1.gd" type="Script" id=5]
[ext_resource path="res://Imagens/down-arrow.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.75, 30.75 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "f3a222a4e1676e5.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 64, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.5, 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Background-1" type="Sprite" parent="."]
position = Vector2( 517, 339 )
scale = Vector2( 0.982128, 2.57034 )
texture = ExtResource( 1 )

[node name="garotodesafio1" type="KinematicBody2D" parent="."]
position = Vector2( -23, 59 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="garotodesafio1"]
position = Vector2( 98, 67 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="garotodesafio1"]
position = Vector2( 98.25, 66.25 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65556, 0, 0, 131072, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131092, 0, 0, 196608, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196628, 0, 0, 262144, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262158, 0, 0, 262164, 0, 0, 262165, 0, 0, 327680, 0, 0, 327694, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 393216, 0, 0, 393230, 0, 0, 393247, 0, 0, 458752, 0, 0, 458770, 0, 0, 458771, 0, 0, 458783, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524307, 0, 0, 524319, 0, 0, 589824, 0, 0, 589843, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589855, 0, 0, 655360, 0, 0, 655379, 0, 0, 655387, 0, 0, 655391, 0, 0, 720896, 0, 0, 720923, 0, 0, 720927, 0, 0, 786432, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786459, 0, 0, 786463, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0 )

[node name="controle" type="Node2D" parent="."]

[node name="direita" type="TouchScreenButton" parent="controle"]
position = Vector2( 437, 565 )
rotation = -1.5708
scale = Vector2( 0.17187, 0.18111 )
normal = ExtResource( 6 )

[node name="baixo" type="TouchScreenButton" parent="controle"]
position = Vector2( 25, 479 )
scale = Vector2( 0.164063, 0.173828 )
normal = ExtResource( 6 )

[node name="cima" type="TouchScreenButton" parent="controle"]
position = Vector2( 312, 563 )
rotation = 3.14159
scale = Vector2( 0.172, 0.181 )
normal = ExtResource( 6 )

[node name="esquerda" type="TouchScreenButton" parent="controle"]
position = Vector2( 728, 478 )
rotation = 1.5708
scale = Vector2( 0.172, 0.181 )
normal = ExtResource( 6 )

[node name="coletavel1" type="Area2D" parent="."]
position = Vector2( 87, 362 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel1"]
position = Vector2( -0.5, -1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="coletavel1/CollisionShape2D"]
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )

[connection signal="pressed" from="controle/direita" to="garotodesafio1" method="_on_direita_pressed"]
[connection signal="pressed" from="controle/baixo" to="garotodesafio1" method="_on_baixo_pressed"]
[connection signal="pressed" from="controle/cima" to="garotodesafio1" method="_on_cima_pressed"]
[connection signal="pressed" from="controle/esquerda" to="garotodesafio1" method="_on_esquerda_pressed"]
[connection signal="body_entered" from="coletavel1" to="garotodesafio1" method="_on_Area2D_body_entered"]
